# logsentinel-lite

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: patterns.example.json
docs/: config-example.md  implementation-notes.md  manual-test-checklist.md  roadmap.md  sample-output.md
docs/daily-progress/: 2026-07-02.md  2026-07-03.md  2026-07-04.md  2026-07-05.md  2026-07-06.md  2026-07-07.md  2026-07-08.md  2026-07-09.md  2026-07-10.md  2026-07-11.md  2026-07-12.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  2026-07-23.md  2026-07-24.md
docs/portfolio/: 2026-W29.md
src/logsentinel_lite/: __init__.py  __main__.py  analyzer.py  cli.py
tests/: test_analyzer.py  test_cli.py
