[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "logsentinel-lite"
version = "0.1.0"
description = "A privacy-conscious CLI for reviewing local text logs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Ali Bidhendi"}]
keywords = ["cli", "log-analysis", "monitoring", "security", "sysadmin"]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "ruff>=0.6"
]

[project.scripts]
logsentinel = "logsentinel_lite.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
